# SimpleGameEngine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  Main.cpp  Vectors.h  WadReader.h
src/Classes/: BST.cpp  EntityManager.cpp  Timer.cpp
src/Components/: Rect.h
src/FontReader/: GlyphReader.h
src/Headers/: BST.h  Color.h  ComponentRegister.h  GameObject.h  IUpdateable.h
src/Rendering/: Rect.cpp
src/Structures/: Vector3.h
src/classes/: Camera.cpp  GlyphReader.cpp  QuadTree.cpp
src/headers/: CMakeLists.txt  Camera.h  ComponentManager.h  Entity.h  EntityManager.h  GameObject.h  Object.h  QuadTree.h  Ray.h  Rect.h  RenderSystem.h  Timer.h  Transform.h  Vector2.h  Vector3.h  Vectors.h
tests/: CMakeLists.txt  Unit_test.cpp
